new function to be build

--- a/utils/weather_scraper.html
+++ b/utils/weather_scraper.html
@@ -24,7 +24,7 @@
 <meta property="og:image" content="https://www.climatempo.com.br/dist/images/compartilhamento.jpg">
 <meta name="premiumAds" content="0">
 
-<meta name="ab" content="5">
+<meta name="ab" content="3">
 <meta name="robots" content="all">
 <meta name="regiao" content="se">
 <meta name="uf" content="sp">
@@ -210,7 +210,7 @@ if (!cookieConsent) {
 </div>
 
 <input type="checkbox" id="chkHamburguerMenu" class="_none">
-<nav class="modal-menu" data-section="modal-menu">
+<nav class="modal-menu modal-menu-teste-banner" data-section="modal-menu">
 <div class="container _overflow-auto custom-scrollbar">
 <section class="wrapper-menu">
 <div>
@@ -364,7 +364,7 @@ Ouvir agora
 <span class="bg-capa"></span>
 <img class="lazyload" width="70" height="70" data-class="lazyload _width-100-pct" data-src="/dist/images/podcast/estudioagro.jpg" alt="EstúdioAgro">
 </figure>
-<div class="_margin-l-20 _flex-column">
+ <div class="_margin-l-20 _flex-column">
 <b class="title">EstúdioAgro</b>
 <span class="_flex _align-center _margin-t-5 -gray -font-12">
 <span class="wrapper-fa-play _margin-r-10">
@@ -718,7 +718,7 @@ Tempo agora em <br>
 <div class="_flex _align-center">
 <img class="_margin-r-10" src="/dist/images/v2/svg/ic-sensation.svg" alt="Sensação térmica agora" />
 <span class="_flex">
- Sensação
+Sensação
 <span id="current-weather-sensation" class="shimmer-placeholder -text _margin-l-5"></span>
 </span>
 </div>
@@ -946,7 +946,7 @@ Tempo agora em <br>
 <div class="_flex _flex-column _align-center _margin-r-10" style="width:70px;">
 <img class="lazyload" data-src="/dist/images/v2/svg/2.svg" width="40" height="40" alt="Sol com algumas nuvens durante o dia. À noite o céu fica com muitas nuvens, mas não chove." />
 <p class="-gray-dark-2 -bold _margin-t-10">Segunda</p>
-</div>
+ </div>
 <div class="_width-100-pct">
 <ul class="variables-list -small">
 <li class="item">
@@ -1487,7 +1487,7 @@ São Paulo
 <div class="row _padding-l-20 _padding-r-20">
 <div class="col-md-2 col-6">
 <ul class="footer-links">
- <li class="item -title"><a href="/previsao-do-tempo" class="link actTriggerGA" data-label="Rodape" data-action="Link_Rodape_Previsao" data-category="Links do Rodape">Previsão</a></li>
+<li class="item -title"><a href="/previsao-do-tempo" class="link actTriggerGA" data-label="Rodape" data-action="Link_Rodape_Previsao" data-category="Links do Rodape">Previsão</a></li>
 <li class="item"><a href="/brasil" class="link actTriggerGA" data-label="Rodape" data-action="Link_Rodape_Previsao_Brasil" data-category="Links do Rodape">Brasil</a></li>
 <li class="item"><a data-link="/previsao-do-tempo/agora/cidade/{slug}" class="link actTriggerGA" data-label="Rodape" data-action="Link_Rodape_Previsao_Agora" data-category="Links do Rodape" data-dynamic-link>Agora</a></li>
 <li class="item"><a data-link="/previsao-do-tempo/cidade/{slug}" class="link actTriggerGA" data-label="Rodape" data-action="Link_Rodape_Previsao_Hoje" data-category="Links do Rodape" data-dynamic-link>Hoje</a></li>
@@ -1618,6 +1618,6 @@ São Paulo
 
 <link rel="preload" href="/dist/js/index.bundle.min.js" as="script" crossorigin="anonymous">
 <script src="/dist/js/index.bundle.min.js" async></script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"74c548f98a7ba4c2","token":"76672a8da85648f7947594a029f54200","version":"2022.8.1","si":100}' crossorigin="anonymous"></script>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon='{"rayId":"74c582f79e1aa5c1","token":"76672a8da85648f7947594a029f54200","version":"2022.8.1","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
