make some emprovement

--- a/utils/weather_scraper.html
+++ b/utils/weather_scraper.html
@@ -24,7 +24,7 @@
 <meta property="og:image" content="https://www.climatempo.com.br/dist/images/compartilhamento.jpg">
 <meta name="premiumAds" content="0">
 
-<meta name="ab" content="5">
+<meta name="ab" content="6">
 <meta name="robots" content="all">
 <meta name="regiao" content="se">
 <meta name="uf" content="sp">
@@ -760,68 +760,67 @@ Sensação
 <div class="col-lg-8 _margin-t-md-20 _margin-t-sm-10" data-end-sticky-banner-mobile>
 <div class="featured-news-carousel -full owl-carousel owl-theme" data-owl-carousel data-items="1" data-autoplay="true">
 <div class="wrapper-news">
-<a data-dynamic-news-link data-link="2022/10/28/intensa-frente-fria-chega-ao-brasil-e-traz-muito-frio-7973" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<a data-dynamic-news-link data-link="2022/10/27/apos-recorde-de-calor-sao-paulo-tera-frio-muito-atipico-7962" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
 <figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2021/07/515x380_edb1b80332b8569330bdefb71f66d497.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2021/07/970x453_edb1b80332b8569330bdefb71f66d497.jpg" class="lazyload fallback" alt="Foto: frio intenso previsto para o fim de julho (iStock)" />
+<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/515x380_f5a0e4088b04ce69a9bdaf6a1d2c9cfb.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2022/10/970x453_f5a0e4088b04ce69a9bdaf6a1d2c9cfb.jpg" class="lazyload fallback" alt="Temperatura na 27 de outubro chegou aos 34,0°C em São Paulo, recorde para 2022. (Foto: São Paulo, SP, Marcelo Pinheiro)" />
 </figure>
 </a>
 <div class="infos">
-<a data-dynamic-news-link data-link="2022/10/28/intensa-frente-fria-chega-ao-brasil-e-traz-muito-frio-7973" title="Intensa frente fria chega ao Brasil e traz muito frio " class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
-<h3 class="title -gray-dark-2 _margin-b-10">Intensa frente fria chega ao Brasil e traz muito frio </h3>
-<h4 class="-gray-dark-2 -normal -font-base">Novembro começa com jeito de inverno: geada, neve e friagem</h4>
+<a data-dynamic-news-link data-link="2022/10/27/apos-recorde-de-calor-sao-paulo-tera-frio-muito-atipico-7962" title="Após recorde de calor, São Paulo terá frio muito atípico" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<h3 class="title -gray-dark-2 _margin-b-10">Após recorde de calor, São Paulo terá frio muito atípico</h3>
+<h4 class="-gray-dark-2 -normal -font-base">Sensação de abafamento continua nos últimos dias de outubro, antes da chegada de uma frente fria excepcionalmente forte para esta época do ano.</h4>
 </a>
 </div>
 </div>
 <div class="wrapper-news">
-<a data-dynamic-news-link data-link="2022/10/31/outubro-termina-com-temporais-e-uma-forte-frente-fria-no-brasil-7991" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<a data-dynamic-news-link data-link="2022/10/25/frio-fora-de-epoca-e-ate-possibilidade-de-neve-no-sul-do-pais-7926" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
 <figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/515x380_7e4bbb4b95e6bec6746107666f9f05c4.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2022/10/970x453_7e4bbb4b95e6bec6746107666f9f05c4.jpg" class="lazyload fallback" alt="Outubro termina com temporais e o avanço de uma forte frente fria sobre o Brasil  (Foto: Atalaia, PR, por Rosemari Montanher)" />
+<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2021/06/515x380_c7fb2f8fa764ddad87eaad0cff6a9384.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2021/06/970x453_c7fb2f8fa764ddad87eaad0cff6a9384.jpg" class="lazyload fallback" alt="Foto: neve em São Joaquim (SC), por São Joaquim Online em 28/6/2021" />
 </figure>
 </a>
 <div class="infos">
-<a data-dynamic-news-link data-link="2022/10/31/outubro-termina-com-temporais-e-uma-forte-frente-fria-no-brasil-7991" title="Forte frente fria avança sobre o Brasil " class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
-<h3 class="title -gray-dark-2 _margin-b-10">Forte frente fria avança sobre o Brasil </h3>
-<h4 class="-gray-dark-2 -normal -font-base">Ar frio de origem polar começa a entrar no país nesta segunda-feira com intensidade muito forte para esta época do ano. Frio se intensifica amanhã.</h4>
+<a data-dynamic-news-link data-link="2022/10/25/frio-fora-de-epoca-e-ate-possibilidade-de-neve-no-sul-do-pais-7926" title="Frio fora de época e até possibilidade de neve no sul do país" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<h3 class="title -gray-dark-2 _margin-b-10">Frio fora de época e até possibilidade de neve no sul do país</h3>
+<h4 class="-gray-dark-2 -normal -font-base">Os primeiros dias de novembro serão marcados por uma forte onda de frio para essa época do ano.</h4>
 </a>
 </div>
 </div>
 <div class="wrapper-news">
-<a data-dynamic-news-link data-link="2022/10/30/outubro-termina-com-temporais-e-novembro-comeca-frio-em-sp-7989" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<a data-dynamic-news-link data-link="2022/10/27/previsao-do-tempo-para-o-2d-turno-de-eleicoes-no-brasil-7950" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
 <figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2018/08/515x380_e2ea0aad17b50a4638713a02dbf871e4.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2018/08/970x453_e2ea0aad17b50a4638713a02dbf871e4.jpg" class="lazyload fallback" alt="" />
+<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/515x380_4965c525b7b1be00c52058daa0b94ca8.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2022/10/970x453_4965c525b7b1be00c52058daa0b94ca8.jpg" class="lazyload fallback" alt="Previsão do tempo para o Brasil para o segundo turno das eleições 2022" />
 </figure>
 </a>
 <div class="infos">
-<a data-dynamic-news-link data-link="2022/10/30/outubro-termina-com-temporais-e-novembro-comeca-frio-em-sp-7989" title="Outubro termina com temporais e novembro começa frio em SP" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
-<h3 class="title -gray-dark-2 _margin-b-10">Outubro termina com temporais e novembro começa frio em SP</h3>
-<h4 class="-gray-dark-2 -normal -font-base">Forte frente fria derruba as temperaturas no estado nesta primeira semana do mês</h4>
+<a data-dynamic-news-link data-link="2022/10/27/previsao-do-tempo-para-o-2d-turno-de-eleicoes-no-brasil-7950" title="Previsão do tempo para o 2° turno de eleições no Brasil" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<h3 class="title -gray-dark-2 _margin-b-10">Previsão do tempo para o 2° turno de eleições no Brasil</h3>
+<h4 class="-gray-dark-2 -normal -font-base">O domingo de eleições terá previsão de pancadas de chuva de Norte ao Sul do país. Forte frente fria é esperada sobre a Região Sul.</h4>
 </a>
 </div>
 </div>
 <div class="wrapper-news">
-<a data-dynamic-news-link data-link="2022/10/30/frio-atipico-em-novembro-primeiros-dias-com-geada-e-neve-no-sul-7988" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<a data-dynamic-news-link data-link="2022/10/27/modelos-climaticos-cmip5-e-cmip6-para-o-setor-de-energia-7953" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
 <figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/515x380_32449cbf3d18b1345078828d3a975999.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2022/10/970x453_32449cbf3d18b1345078828d3a975999.jpg" class="lazyload fallback" alt="" />
+<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/515x380_68663e94042516f140ea2bff49274edc.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2022/10/970x453_68663e94042516f140ea2bff49274edc.jpg" class="lazyload fallback" alt="" />
 </figure>
 </a>
 <div class="infos">
-<a data-dynamic-news-link data-link="2022/10/30/frio-atipico-em-novembro-primeiros-dias-com-geada-e-neve-no-sul-7988" title="Frio atípico em novembro: primeiros dias com geada e neve no Sul" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
-<h3 class="title -gray-dark-2 _margin-b-10">Frio atípico em novembro: primeiros dias com geada e neve no Sul</h3>
-<h4 class="-gray-dark-2 -normal -font-base">Frio de inverno para os primeiros dias do mês e temperaturas negativas </h4>
+<a data-dynamic-news-link data-link="2022/10/27/modelos-climaticos-cmip5-e-cmip6-para-o-setor-de-energia-7953" title="Modelos Climáticos: CMIP5 e CMIP6 para o setor de energia" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<h3 class="title -gray-dark-2 _margin-b-10">Modelos Climáticos: CMIP5 e CMIP6 para o setor de energia</h3>
+<h4 class="-gray-dark-2 -normal -font-base">O clima está mudando e cada vez mais é possível perceber essas mudanças no nosso dia a dia, seja pela atuação de ondas de calor atípicas, chuvas.</h4>
 </a>
 </div>
 </div>
 <div class="wrapper-news">
-<a data-dynamic-news-link data-link="2022/10/29/a-chuva-deve-aumentar-e-tera-frio-no-centro-oeste-7983" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<a data-dynamic-news-link data-link="2022/10/27/nuvem-iridescente-de-pileus-em-sao-luis-no-maranhao-7955" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
 <figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/515x380_0f681535caa4841f6f7050fabbcd8a66.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2022/10/970x453_0f681535caa4841f6f7050fabbcd8a66.jpg" class="lazyload fallback" alt="" />
+<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/515x380_d5a190d80fcf74492768cdd9bbf0c880.jpg" data-fallback="https://imagens.climatempo.com.br/climapress/galeria/2022/10/970x453_d5a190d80fcf74492768cdd9bbf0c880.jpg" class="lazyload fallback" alt="" />
 </figure>
 </a>
 <div class="infos">
-<a data-dynamic-news-link data-link="2022/10/29/a-chuva-deve-aumentar-e-tera-frio-no-centro-oeste-7983" title="A chuva deve aumentar e terá frio no Centro-Oeste " class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
-<h3 class="title -gray-dark-2 _margin-b-10">A chuva deve aumentar e terá frio no Centro-Oeste </h3>
-<h4 class="-gray-dark-2 -normal -font-base">Até o dia 01 de novembro terá temporais e acumulados altos no Centro-Oeste e nos primeiros três dias pode ter sensação de frio pela Região
-</h4>
+<a data-dynamic-news-link data-link="2022/10/27/nuvem-iridescente-de-pileus-em-sao-luis-no-maranhao-7955" title="Nuvem iridescente de Piléus em São Luis, no Maranhão" class="actTriggerGA" data-category="Pagina_home" data-action="Clique_noticia_card_destaques" data-label="Home_site">
+<h3 class="title -gray-dark-2 _margin-b-10">Nuvem iridescente de Piléus em São Luis, no Maranhão</h3>
+<h4 class="-gray-dark-2 -normal -font-base">Nuvem iridescente de Piléus em São Luis, no Maranhão, no dia 26 de outubro de 2022.</h4>
 </a>
 </div>
 </div>
@@ -990,38 +989,6 @@ Sensação
 </div>
 <div class="card -no-top _padding-t-20 _padding-r-20 _padding-b-40 _padding-l-20">
 <div class="card-featured-news">
-<a data-dynamic-news-link data-link="2022/10/30/domingo-de-eleicao-com-temporais-na-metade-sul-e-no-norte-do-pais-7986" class="_flex actTriggerGA" title="Domingo de eleição com temporais na metade sul e no Norte do país" id="Botao_card_noticia_1" data-category="Pagina_home" data-action="Clique_botao_card_ultimas_noticia_1" data-label="Home_site">
-<figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/03/145x108_415453e871d88bcab080185a2bb291c6.jpg" class="lazyload" alt="Foto: Porto Alegre (RS), por André C.">
-</figure>
-<div class="_margin-l-20">
-<h4 class="-gray-dark-2 -font-base -bold">Domingo de eleição com temporais na metade sul e no Norte do país</h4>
-</div>
-</a>
-<a data-dynamic-news-link data-link="2022/10/29/brasil-tem-dia-umido-e-quente-com-risco-de-chuva-forte-7981" class="_flex actTriggerGA" title="Brasil tem dia úmido e quente, com risco de chuva forte" id="Botao_card_noticia_2" data-category="Pagina_home" data-action="Clique_botao_card_ultimas_noticia_2" data-label="Home_site">
-<figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2022/10/145x108_a90df02657f344578a619f3c4d42900e.jpg" class="lazyload" alt="Temporal em Piracicaba (SP), em 28/10/2022 - Climaaovivo">
-</figure>
-<div class="_margin-l-20">
-<h4 class="-gray-dark-2 -font-base -bold">Brasil tem dia úmido e quente, com risco de chuva forte</h4>
-</div>
-</a>
-<a data-dynamic-news-link data-link="2022/10/28/temporada-de-chuvas-aumenta-o-risco-de-surto-de-dengue-no-br-7979" class="_flex actTriggerGA" title="Temporada de chuvas aumenta o risco de surto de dengue no BR" id="Botao_card_noticia_3" data-category="Pagina_home" data-action="Clique_botao_card_ultimas_noticia_3" data-label="Home_site">
-<figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2017/01/145x108_f8b8cfc3043e2daa665b92774190d02e.jpg" class="lazyload" alt="">
-</figure>
-<div class="_margin-l-20">
-<h4 class="-gray-dark-2 -font-base -bold">Temporada de chuvas aumenta o risco de surto de dengue no BR</h4>
-</div>
-</a>
-<a data-dynamic-news-link data-link="2022/10/28/temporal-no-rio-de-janeiro-7969" class="_flex actTriggerGA" title="Temporal no Rio de Janeiro" id="Botao_card_noticia_4" data-category="Pagina_home" data-action="Clique_botao_card_ultimas_noticia_4" data-label="Home_site">
-<figure class="image">
-<img data-src="https://imagens.climatempo.com.br/climapress/galeria/2021/10/145x108_8b2b3872135fd64b74875480a123b68e.jpg" class="lazyload" alt="">
-</figure>
-<div class="_margin-l-20">
-<h4 class="-gray-dark-2 -font-base -bold">Temporal no Rio de Janeiro</h4>
-</div>
-</a>
 </div>
 </div>
 </div>
@@ -1047,7 +1014,7 @@ Sensação
 <span class="icon -circle -agro">
 <img src="/dist/images/v2/svg/ic-logo-agroclima.svg" alt="Agroclima" />
 </span>
-<h3 class="-bold -font-18 -gray-dark-2">Notícias Agrícolas</h3>
+ <h3 class="-bold -font-18 -gray-dark-2">Notícias Agrícolas</h3>
 </div>
 <a class="-blue actTriggerGA" href="https://agroclima.climatempo.com.br/noticias-agricolas/" title="Mais notícias agrícolas" id="Botao_mais_noticias_card_noticias_agricolas" data-category="Pagina_home" data-action="Clique_botao_mais_noticias_card_noticias_agricolas" data-label="Home_site">Mais notícias</a>
 </div>
@@ -1298,7 +1265,7 @@ São Paulo
 <div>
 <a href="/previsao-do-tempo/litoral/80/praiadeitarare-sp" class="-bold -gray-dark-2 _margin-b-5 _block" title="Praia de Itararé">Praia de Itararé</a>
 <p class="-gray _flex _align-center">
-<img class="lazyload _margin-r-5" data-src="/dist/images/v2/svg/ic-mare-baixa.svg" alt="Altura mínima da onda">
+ <img class="lazyload _margin-r-5" data-src="/dist/images/v2/svg/ic-mare-baixa.svg" alt="Altura mínima da onda">
 1.30m
 <img class="lazyload _margin-l-10 _margin-r-5" data-src="/dist/images/v2/svg/ic-mare-alta.svg" alt="Altura máxima da onda">
 2.20m
@@ -1605,6 +1572,6 @@ São Paulo
 
 <link rel="preload" href="/dist/js/index.bundle.min.js" as="script" crossorigin="anonymous">
 <script src="/dist/js/index.bundle.min.js" async></script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"762c5de08e4e0108","token":"76672a8da85648f7947594a029f54200","version":"2022.10.3","si":100}' crossorigin="anonymous"></script>
+<script defer src="https://static.cloudflareinsights.com/beacon.min.js/vaafb692b2aea4879b33c060e79fe94621666317369993" integrity="sha512-0ahDYl866UMhKuYcW078ScMalXqtFJggm7TmlUtp0UlD4eQk0Ixfnm5ykXKvGJNFjLMoortdseTfsRT8oCfgGA==" data-cf-beacon='{"rayId":"762c749e2afd4d3c","token":"76672a8da85648f7947594a029f54200","version":"2022.10.3","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
